--- a/project.ipynb
+++ b/project.ipynb
@@ -24,11 +24,70 @@
     "import scipy.stats as stats\n",
     "import seaborn as sns\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from graphviz import Digraph\n",
     "\n",
     "SEED = 19 + 14 ## sum of length of our full names or just use 42"
    ],
    "outputs": [],
    "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Defining helper functions",
+   "id": "4c3e685398631677"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def create_poisson_dag():\n",
+    "    dot = Digraph(comment='Poisson Regression Model')\n",
+    "\n",
+    "    dot.node('X', 'X (Predictors)', shape='box')\n",
+    "    dot.node('nkill', 'nkill (Observed Counts)', shape='box')\n",
+    "    dot.node('alpha', 'alpha')\n",
+    "    dot.node('beta', 'beta')\n",
+    "    dot.node('eta', 'eta = alpha + X * beta')\n",
+    "    dot.node('nkill_dist', 'Poisson_log(nkill | eta)')\n",
+    "    dot.node('nkill_pred', 'nkill_pred')\n",
+    "\n",
+    "    dot.edge('X', 'eta')\n",
+    "    dot.edge('beta', 'eta')\n",
+    "    dot.edge('alpha', 'eta')\n",
+    "    dot.edge('eta', 'nkill_dist')\n",
+    "    dot.edge('nkill_dist', 'nkill')\n",
+    "    dot.edge('eta', 'nkill_pred')\n",
+    "\n",
+    "    return dot\n",
+    "\n",
+    "\n",
+    "def create_negative_binomial_dag():\n",
+    "    dot = Digraph(comment='Negative Binomial Regression Model')\n",
+    "\n",
+    "    dot.node('X', 'X (Predictors)', shape='box')\n",
+    "    dot.node('nkill', 'nkill (Observed Counts)', shape='box')\n",
+    "    dot.node('alpha', 'alpha')\n",
+    "    dot.node('beta', 'beta')\n",
+    "    dot.node('phi', 'phi')\n",
+    "    dot.node('eta', 'eta = alpha + X * beta')\n",
+    "    dot.node('nkill_dist', 'NegBinomial_2_log(nkill | eta, phi)')\n",
+    "    dot.node('nkill_pred', 'nkill_pred')\n",
+    "\n",
+    "    dot.edge('X', 'eta')\n",
+    "    dot.edge('beta', 'eta')\n",
+    "    dot.edge('alpha', 'eta')\n",
+    "    dot.edge('phi', 'nkill_dist')\n",
+    "    dot.edge('eta', 'nkill_dist')\n",
+    "    dot.edge('nkill_dist', 'nkill')\n",
+    "    dot.edge('phi', 'nkill_pred')\n",
+    "    dot.edge('eta', 'nkill_pred')\n",
+    "\n",
+    "    return dot"
+   ],
+   "id": "81a15fda7c218a3f"
   },
   {
    "metadata": {},
@@ -512,6 +571,14 @@
   },
   {
    "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "display(create_poisson_dag())",
+   "id": "160b379328af6262"
+  },
+  {
+   "metadata": {},
    "cell_type": "markdown",
    "source": "## Presenting results",
    "id": "9d4ee61815226a22"
@@ -795,6 +862,14 @@
     "\n",
     "print(fit.summary())"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "display(create_negative_binomial_dag())",
+   "id": "e0d06aff2099eea8"
   },
   {
    "metadata": {},
