--- a/IdeaV2/V2.ipynb
+++ b/IdeaV2/V2.ipynb
@@ -129,7 +129,17 @@
     "\n",
     "However, the number of victims of the attack cannot be simply predicted. There are some obviousness that, for example, bomb can kill more people than knife, but this is a rather more complex problem that we have taken upon our honor to investigate.\n",
     "\n",
-    "Need to write more. IDK now what."
+    "Need to write more. IDK what for now."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "6b26e069-2ac3-4d93-9379-42a0cb1cd664",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO Add DAGs"
    ]
   },
   {
@@ -139,7 +149,7 @@
    "source": [
     "## 2. Data preprocessing\n",
     "\n",
-    "The data we used in our project is from Global Terrorism Database (GTB). It is opensource database created by researchers at University of Maryland, who obtained a large database originally collected by the Pinkerton Global Intelligence Services. Database contains records of almost all terrorism attacks from years 1970 to 2017 except year 1993. Records from 1993 are missing because of PGIS office move (error during file migration process), and these data have never been fully recovered. Database contains 135 columns in total, which describe attack, for example weapon type, date of attack, country, target and many more."
+    "The data we used in our project is from Global Terrorism Database (GTB). It is opensource database created by researchers at University of Maryland, who obtained a large database originally collected by the Pinkerton Global Intelligence Services. Database contains records of almost all terrorism attacks from years 1970 to 2017 except year 1993. Records from 1993 are missing because of PGIS office move (error during file migration process), and these data have never been fully recovered. Database contains 135 columns in total, which describe attack, for example weapon type, date of attacks, country, target and many more."
    ]
   },
   {
