--- a/project.ipynb
+++ b/project.ipynb
@@ -1015,7 +1015,40 @@
      "output_type": "display_data"
     }
    ],
-   "source": "n_values = np.arange(0, 20)\n\ntrue_counts = []\nbinomial_counts = []\npoisson_counts = []\n\nfor n in n_values:\n    true_count = np.sum(df[\"nkill\"].values == n)\n    binomial_count = np.sum(np.round(df_2_prod.iloc[0][16:]) == n)\n    poisson_count = np.sum(np.round(df_1_prod.iloc[0][16:]) == n)\n    \n    true_counts.append(true_count)\n    binomial_counts.append(binomial_count)\n    poisson_counts.append(poisson_count)\n\n\nbar_width = 0.3\nindex = np.arange(len(n_values))\n\nplt.figure(figsize=(12,6))\nplt.bar(index - bar_width, true_counts, bar_width, label='Real')\nplt.bar(index, binomial_counts, bar_width, label='Binomial (PPC)')\nplt.bar(index + bar_width, poisson_counts, bar_width, label='Poisson (PPC)')\n\nplt.xlabel('Number of victims (n)')\nplt.ylabel('Number of cases')\nplt.xticks(index, n_values)\nplt.legend()\nplt.title('Comparison of the number of cases across models')\nplt.show()"
+   "source": [
+    "n_values = np.arange(0, 20)\n",
+    "\n",
+    "true_counts = []\n",
+    "binomial_counts = []\n",
+    "poisson_counts = []\n",
+    "\n",
+    "display(df_2_prod)\n",
+    "\n",
+    "for n in n_values:\n",
+    "    true_count = np.sum(df[\"nkill\"].values == n)\n",
+    "    binomial_count = np.sum(np.round(df_2_prod.iloc[0][16:]) == n)\n",
+    "    poisson_count = np.sum(np.round(df_1_prod.iloc[0][16:]) == n)\n",
+    "    \n",
+    "    true_counts.append(true_count)\n",
+    "    binomial_counts.append(binomial_count)\n",
+    "    poisson_counts.append(poisson_count)\n",
+    "\n",
+    "\n",
+    "bar_width = 0.3\n",
+    "index = np.arange(len(n_values))\n",
+    "\n",
+    "plt.figure(figsize=(12,6))\n",
+    "plt.bar(index - bar_width, true_counts, bar_width, label='Real')\n",
+    "plt.bar(index, binomial_counts, bar_width, label='Binomial (PPC)')\n",
+    "plt.bar(index + bar_width, poisson_counts, bar_width, label='Poisson (PPC)')\n",
+    "\n",
+    "plt.xlabel('Number of victims (n)')\n",
+    "plt.ylabel('Number of cases')\n",
+    "plt.xticks(index, n_values)\n",
+    "plt.legend()\n",
+    "plt.title('Comparison of the number of cases across models')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
