--- a/Project_TerrorismAttacks_BC.ipynb
+++ b/Project_TerrorismAttacks_BC.ipynb
@@ -974,17 +974,71 @@
    "source": [
     "For the first model, the priors are selected with use of a Poisson-log link: \n",
     "\n",
-    "$log(\\lambda_n) = \\alpha + X_{cont}[n]\\beta_{cont} + \\beta_{weaptype}[n] + \\beta_{targtype}[n] + \\beta_{country}[n]$.\n",
+    "\\begin{aligned}\n",
+    "\\alpha &\\sim \\mathcal{N}(2, 1.5) \\\\\\\\\n",
+    "\\beta_{\\text{cont}} &\\sim \\mathcal{N}(0, 0.5) \\\\\\\\\n",
+    "\\beta_{\\text{weap}} &\\sim \\mathcal{N}(0, 0.5)  \\\\\\\\\n",
+    "\\beta_{\\text{targ}} &\\sim \\mathcal{N}(0, 0.5)  \\\\\\\\\n",
+    "\\beta_{\\text{country}} &\\sim \\mathcal{N}(0, 0.5)  \\\\\\\\\n",
+    "\\pi_{\\text{zero}} &\\sim \\text{Beta}(1, 1)\n",
+    "\\end{aligned}\n",
     "\n",
-    "The intercept ($\\alpha$) has a Normal(3.5, 1.25) prior, indicating that the prior belief about the average attack rate is that it is centered around 3.5 with a standard deviation of 1.25. \n",
-    "The continuous covariate coefficients ($\\beta_{cont}$) are given the Normal(0.05, 0.25) priors that mean an effect of a small size, which is slightly off the zero. \n",
-    "The weapon-type effects ($\\beta_{weaptype}$) are given Normal(0.5, 0.5) priors that give them a chance to be of the size we specified range. \n",
-    "Target-type effects ($\\beta_{targtype}$) use Normal(0.15, 0.5) priors which mean that the character of the target will not change much, while at the same time being quite unsure about this change.\n",
-    "Along the same lines, the country effects ($\\beta_{country}$) have Normal(0.15, 0.5) priors which illustrate that the diversity of the countries is depicted by a moderate amount of variance of the prior distribution.\n",
-    "These values are based on our current knowledge of the discussed domain and determine the impact of each predictor on the final outcome.\n",
+    "And the Linear Predictor (log rate):\n",
+    "\\begin{aligned}\n",
+    "log(\\lambda_n) = \\alpha + X_{cont}[n]\\beta_{cont} + \\beta_{weaptype}[n] + \\beta_{targtype}[n] + \\beta_{country}[n].\n",
+    "\\end{aligned}\n",
     "\n",
+    "And Zero-inflated Poisson (ZIP):\n",
+    "\\begin{align*}\n",
+    "nkill_{\\text{prior}} =\n",
+    "\\begin{cases}\n",
+    "0 & \\text{if } z_n = 0 \\\\\\\\\n",
+    "\\text{Poisson}(\\lambda_n) & \\text{if } z_n = 1\n",
+    "\\end{cases}\n",
+    "\\end{align*}\n",
+    "\n",
+    "where:\n",
+    "\\begin{align*}\n",
+    "z_n \\sim \\text{Bernoulli}(\\pi_{\\text{zero}})\n",
+    "\\end{align*}\n",
+    "\n",
+    "\n",
+    "The intercept ($\\alpha$) has a Normal(2, 1.5) prior, indicating that the prior belief about the average attack rate is that it is centered around 7.4 victims.\n",
+    "The continuous covariate coefficients ($\\beta_{cont}$) are given the Normal(0, 0.5) priors that mean an effect of a small size, which is slightly off the zero. \n",
+    "The weapon-type effects ($\\beta_{weaptype}$) are given Normal(0, 0.5) priors that give them a chance to be of the size we specified range. \n",
+    "Target-type effects ($\\beta_{targtype}$) use Normal(0, 0.5) priors which mean that the character of the target will not change much, while at the same time being quite unsure about this change.\n",
+    "Along the same lines, the country effects ($\\beta_{country}$) have Normal(0, 0.5) priors which illustrate that the diversity of the countries is depicted by a moderate amount of variance of the prior distribution.\n",
+    "These values are based on our current knowledge of the discussed domain and determine the impact of each predictor on the final outcome."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27b26fff-b918-4880-b93a-77db5fdd7ae9",
+   "metadata": {},
+   "source": [
     "For the second model, the selected priors are almost the same except one change. The normal distribution was changed to student-t distribution with the same mean and standard diviation, and the $\\nu$ set to 10.\n",
-    "We decided to that change, because student-t distributions have heavier tails than normal distributions, as a result they are more tolerant of extreme coefficient values."
+    "We decided to that change, because student-t distributions have heavier tails than normal distributions, as a result they are more tolerant of extreme coefficient values.\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\alpha &\\sim \\mathcal{N}(2, 1.5) \\\\\\\\\n",
+    "\\beta_{\\text{cont}} &\\sim \\text{Student-}t(10, 0, 0.5) \\\\\\\\\n",
+    "\\beta_{\\text{weaptype}} &\\sim \\text{Student-}t(10, 0, 0.5) \\\\\\\\\n",
+    "\\beta_{\\text{targtype}} &\\sim \\text{Student-}t(10, 0, 0.5) \\\\\\\\\n",
+    "\\beta_{\\text{country}} &\\sim \\text{Student-}t(10, 0, 0.5) \\\\\\\\\n",
+    "\\phi &\\sim \\text{Exponential}(1)\n",
+    "\\end{align*}\n",
+    "\n",
+    "\n",
+    "And the Linear Predictor (log rate):\n",
+    "\\begin{aligned}\n",
+    "log(\\lambda_n) = \\alpha + X_{cont}[n]\\beta_{cont} + \\beta_{weaptype}[n] + \\beta_{targtype}[n] + \\beta_{country}[n].\n",
+    "\\end{aligned}\n",
+    "\n",
+    "And Negative Binomial:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "nkill_{\\text{prior}} \\sim \\text{NegBinomial-2-Log}(\\lambda_n, \\phi)\n",
+    "\\end{align*}\n"
    ]
   },
   {
